<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.detailed.HotelDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHotelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_hotel_column_name" />

        <EditText
            android:id="@+id/etHotelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/list_hotel_column_name" />

        <TextView
            android:id="@+id/tvHotelAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_hotel_column_address" />

        <EditText
            android:id="@+id/etHotelAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/list_hotel_column_address" />

        <TextView
            android:id="@+id/tvHotelDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_hotel_column_direction" />

        <Spinner
            android:id="@+id/spnDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_edit" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_delete" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>