<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cursework.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_fragment_direction"
            app:destination="@id/fragment_direction" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_hotel"
            app:destination="@id/fragment_hotel" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_kinds"
            app:destination="@id/fragment_kinds" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_category"
            app:destination="@id/fragment_category" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_tour_operator"
            app:destination="@id/fragment_tour_operator" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_employee"
            app:destination="@id/fragment_employee" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_client"
            app:destination="@id/fragment_client" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_tour"
            app:destination="@id/fragment_tour" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_voucher"
            app:destination="@id/fragment_voucher" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_voucher"
        android:name="com.example.cursework.ui.newVoucher.NewVoucherFragment"
        android:label="@string/title_new_voucher"
        tools:layout="@layout/fragment_new_voucher" >
        <action
            android:id="@+id/action_navigation_new_voucher_to_fragment_client"
            app:destination="@id/fragment_client" />
        <action
            android:id="@+id/action_navigation_new_voucher_to_fragment_tour"
            app:destination="@id/fragment_tour" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.cursework.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_fragment_employee_detail"
            app:destination="@id/fragment_employee_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_direction"
        android:name="com.example.cursework.fragments.DirectionFragment"
        android:label="@string/title_direction"
        tools:layout="@layout/fragment_direction" />

    <fragment
        android:id="@+id/fragment_hotel"
        android:name="com.example.cursework.fragments.HotelFragment"
        android:label="@string/title_hotel"
        tools:layout="@layout/fragment_hotel" >
        <action
            android:id="@+id/action_fragment_hotel_to_fragment_hotel_detail"
            app:destination="@id/fragment_hotel_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_hotel_detail"
        android:name="com.example.cursework.fragments.detailed.HotelDetailFragment"
        android:label="@string/title_hotel"
        tools:layout="@layout/fragment_hotel_detail" />

    <fragment
        android:id="@+id/fragment_kinds"
        android:name="com.example.cursework.fragments.KindsFragment"
        android:label="@string/title_kind"
        tools:layout="@layout/fragment_kinds" />

    <fragment
        android:id="@+id/fragment_category"
        android:name="com.example.cursework.fragments.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/fragment_tour_operator"
        android:name="com.example.cursework.fragments.TourOperatorFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_tour_operator" >
        <action
            android:id="@+id/action_fragment_tour_operator_to_fragment_tour_operator_detail"
            app:destination="@id/fragment_tour_operator_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_tour_operator_detail"
        android:name="com.example.cursework.fragments.detailed.TourOperatorDetailFragment"
        android:label="@string/title_tour_operator"
        tools:layout="@layout/fragment_tour_operator_detail" />

    <fragment
        android:id="@+id/fragment_employee"
        android:name="com.example.cursework.fragments.EmployeeFragment"
        android:label="@string/title_employee"
        tools:layout="@layout/fragment_employee" >
        <action
            android:id="@+id/action_fragment_employee_to_fragment_employee_detail"
            app:destination="@id/fragment_employee_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_employee_detail"
        android:name="com.example.cursework.fragments.detailed.EmployeeDetailFragment"
        android:label="@string/title_employee"
        tools:layout="@layout/fragment_employee_detail" />

    <fragment
        android:id="@+id/fragment_client"
        android:name="com.example.cursework.fragments.ClientFragment"
        android:label="@string/title_client"
        tools:layout="@layout/fragment_client" >
        <action
            android:id="@+id/action_fragment_client_to_fragment_client_detail"
            app:destination="@id/fragment_client_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_client_detail"
        android:name="com.example.cursework.fragments.detailed.ClientDetailFragment"
        android:label="@string/title_client"
        tools:layout="@layout/fragment_client_detail" />

    <fragment
        android:id="@+id/fragment_tour"
        android:name="com.example.cursework.fragments.TourFragment"
        android:label="@string/title_tour"
        tools:layout="@layout/fragment_tour" >
        <action
            android:id="@+id/action_fragment_tour_to_fragment_tour_detail"
            app:destination="@id/fragment_tour_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_tour_detail"
        android:name="com.example.cursework.fragments.detailed.TourDetailFragment"
        android:label="@string/title_tour"
        tools:layout="@layout/fragment_tour_detail" >
        <action
            android:id="@+id/action_fragment_tour_detail_to_fragment_kinds"
            app:destination="@id/fragment_kinds" />
        <action
            android:id="@+id/action_fragment_tour_detail_to_fragment_category"
            app:destination="@id/fragment_category" />
        <action
            android:id="@+id/action_fragment_tour_detail_to_fragment_hotel"
            app:destination="@id/fragment_hotel" />
        <action
            android:id="@+id/action_fragment_tour_detail_to_fragment_tour_operator"
            app:destination="@id/fragment_tour_operator" />
    </fragment>

    <fragment
        android:id="@+id/fragment_voucher"
        android:name="com.example.cursework.fragments.VoucherFragment"
        android:label="@string/title_voucher"
        tools:layout="@layout/fragment_voucher" >
        <action
            android:id="@+id/action_fragment_voucher_to_navigation_new_voucher"
            app:destination="@id/navigation_new_voucher" />
    </fragment>
</navigation>